style fix: make context menu more contrast

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,19 @@
     z-index: 10;
     background-color: silver;
     font-size: small;
+    padding-top: 3px;
+    padding-right: 3px;
+    padding-bottom: 3px;
+    padding-left: 3px;
     cursor: default;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
 }
 
 .cmActive:hover {
     color: black;
-    background-color: blue;
+    background-color: #89abcd;
 }
 
 .cmInactive {
